// ------------------------------------------------------------------------
// Copyright 2021 The Dapr Authors
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//     http://www.apache.org/licenses/LICENSE-2.0
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// ------------------------------------------------------------------------

syntax = "proto3";

option csharp_namespace = "GrpcService.Generated";

message DataItem {
    int32 DeviceId = 1;
    map<string, string> Attribute = 2;
}

message DeviceDataExReport {
    int32 DataType = 1;
    string Time = 2;
    string Flow = 3;
    repeated DataItem DataItems = 4;
}